# babappasnake

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  Snakefile  environment.yml  manuscript.tex  pyproject.toml  references.bib  setup.py
.github/workflows/: python-publish.yml  workflow.yml
babappasnake/: cli.py  utils.py
babappasnake/scripts/: backtranslate_alignment.py  compare_alignment_methods.py  extract_selected_branch_ancestors.py  generate_robustness_reports.py  make_foreground_tree.py  map_cds_to_proteins.py  parse_hyphy_foregrounds.py  prepare_external_orthogroup.py  prepare_foreground_trees.py  prepare_pal2nal_inputs.py  root_tree_outgroup.py  run_branchsite_batch.py  run_codeml_asr.py  run_gard_screen.py  run_hyphy.py  run_orthofinder_pipeline.py  run_rbh_pipeline.py  strip_terminal_stop_codon.py  summarize_results.py  write_waiting_note.py
babappasnake/workflow/: Snakefile  config_template.yaml
envs/: codeml.yaml
src/babappasnake/: cli.py
src/babappasnake/_bundle/: __init__.py
src/babappasnake/_bundle/config/: config.yaml
src/babappasnake/_bundle/envs/: iqtree.yaml
src/babappasnake/_bundle/workflow/rules/: alignment.smk  reporting.smk
src/babappasnake/_bundle/workflow/scripts/: common.py  render_codeml_tree.py  root_and_label_tree.py  run_codeml_branchsite.py  select_codeml_targets.py  validate_alignment.py  validate_user_cds.py  write_executive_summary.py
tests/: test_backtranslate_alignment.py  test_cli.py  test_extract_selected_branch_ancestors.py  test_orthogroup_no_hits_stop.py  test_prepare_external_orthogroup.py  test_robustness_reports.py  test_root_tree_outgroup.py  test_run_codeml_asr.py  test_run_gard_screen.py  test_run_hyphy.py  test_run_orthofinder_pipeline.py  test_run_rbh_pipeline_discovery.py  test_trim_strategy.py  test_version_metadata.py
workflow/rules/: hyphy.smk
workflow/scripts/: compile_thresholds.py  prepare_cds_checkpoint.py  project_protein_trim_to_cds.py  summarize_codeml.py  summarize_iqtree.py
zenodo/: CONTENTS.tsv  README.md  SHA256SUMS.txt
zenodo/distributions/: babappasnake-0.2.0-py3-none-any.whl
zenodo/reproducibility/: README.md
zenodo/reproducibility/inputs/: cds.fasta  query_protein.fasta
zenodo/reproducibility/run_metadata/: path_remapping.txt  runtime_config_archive_example.yaml  runtime_config_original.yaml  software_versions.txt  validated_run_command.txt  validated_run_summary.txt
zenodo/source/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
zenodo/source/envs/: clipkit.yaml  hyphy.yaml  python.yaml
zenodo/source/src/babappasnake/_bundle/config/: species_metadata.tsv
zenodo/source/src/babappasnake/_bundle/envs/: babappalign.yaml  rbh.yaml
zenodo/source/src/babappasnake/_bundle/workflow/rules/: codeml.smk  tree.smk
zenodo/source/src/babappasnake/_bundle/workflow/scripts/: render_codeml_tree.py  run_clipkit.py  run_rbh_species.py  select_codeml_targets.py  select_orthogroup.py  validate_alignment_products.py  (+1 more)
zenodo/source/workflow/rules/: checkpoint.smk  rbh.smk
zenodo/source/workflow/scripts/: parse_hyphy.py  run_babappalign.py  write_input_manifest.py
