[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babappasnake"
version = "0.1.0"
description = "Packaged Snakemake workflow for exploratory orthology-based molecular evolution analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Krishnendu Sinha"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "PyYAML>=6.0",
  "snakemake>=7,<10",
]

[project.urls]
Homepage = "https://github.com/sinhakrishnendu/babappasnake"
Repository = "https://github.com/sinhakrishnendu/babappasnake"
Issues = "https://github.com/sinhakrishnendu/babappasnake/issues"

[project.scripts]
babappasnake = "babappasnake.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
