[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babappasnake"
version = "0.3.0"
description = "A simple Snakemake pipeline for episodic selection analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "OpenAI for Krishnendu"}
]
dependencies = [
  "biopython>=1.83",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "pyyaml>=6.0",
  "snakemake>=8.0",
  "clipkit>=2.7.0"
]

[project.scripts]
babappasnake = "babappasnake.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
babappasnake = ["workflow/Snakefile", "workflow/config_template.yaml", "workflow/templates/*"]

[tool.setuptools.packages.find]
include = ["babappasnake*"]
exclude = ["data*", "tests*", "docs*", "examples*"]
