[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babappasnake"
version = "0.7.0"
description = "A simple Snakemake pipeline for episodic selection analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Krishnendu Sinha"}
]
dependencies = [
  "biopython>=1.83",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "pyyaml>=6.0",
  "snakemake>=8.0",
  "clipkit>=2.7.0"
]

[project.scripts]
babappasnake = "babappasnake.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
babappasnake = ["workflow/Snakefile", "workflow/config_template.yaml"]

[tool.setuptools.exclude-package-data]
"*" = ["*.py[cod]", "__pycache__/*", "*/__pycache__/*", ".DS_Store", "*/.DS_Store"]

[tool.setuptools.packages.find]
namespaces = false
include = ["babappasnake*"]
exclude = ["data*", "tests*", "docs*", "examples*", "*.__pycache__*"]
